updated glogal.css file

--- a/app/globals.css
+++ b/app/globals.css
@@ -182,7 +182,7 @@
 }
 
 .footer__copyrights-link {
-  @apply flex-1 flex sm:justify-end justify-center max-sm:mt-4 gap-10;
+  @apply flex-1 flex sm:justify-end justify-center gap-10;
 }
 /* END: Footer styles */
 
